--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "~4.16.1",
     "mongoose": "^5.7.10",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "react-bootstrap": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
