--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "connected-react-router": "^6.6.1",
     "parallax-js": "^3.1.0",
     "react": "^16.10.2",
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
