--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "jordanbarbosa.com",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://jordanbarbosa.com",
+  "homepage": "https://old-jordanbarbosa-portfolio.herokuapp.com/",
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.19.0",
